Preference window alignment issue fixed (#380)

--- a/css/styles.css
+++ b/css/styles.css
@@ -586,7 +586,7 @@ input:disabled + .slider {
 
 #preferences-window p {
   font-variant-caps: all-petite-caps;
-  text-align: center;
+  text-align: left;
 }
 
 /* Waiver page styles */
